# crypto-valuation

./: .gitignore  README.md  get_schema.py  main.py  pyproject.toml  requirements.txt  schema_analyzer.py
analysis/: efficiency.py  valuation.py
data/: schemas.json
schemas/: protocols_schema.json  revenue_schema.json
